--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1751,107 +1751,107 @@ stories:
   domain: http://www.othellooutlook.com/
   link: http://othellooutlook.com/real-estate-investment-professionals-turn-online-clubs/
 images:
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-- name: old-church-oldchurch-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-emily-carr.jpg
-- name: la-muse-old-barn-falling-over.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-old-barn-falling-over.jpg
-- name: gypsy-wagon-gypsywagon-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-mucha-mult.jpg
-- name: oldtrain-oldtrain-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colorful-dream.jpg
-- name: border-fence-border-fence-on-hill-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-atari-missle.jpg
-- name: la-muse-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eiphel-tower-paris-brown.jpg
-- name: amusement-park-amusement-park-2-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dali-three.jpg
-- name: mediterranean-mediterranean-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-umberto-bocc.jpg
-- name: statue-of-liberty-front-view-statueofliberty-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-green-zuma.jpg
-- name: oldsmallboat-oldsmallboat-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-sand-paper.jpg
-- name: sand-hand-sand-hand-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crunch-paper.jpg
-- name: powerlines-power-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kand-two.jpg
-- name: old-door-lock-old-door-lock-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-graham-sutherland.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-- name: nazi-invasion-chess-in-the-park-with-pigeons.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-chess-in-the-park-with-pigeons.jpg
-- name: old-house-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-alberto-giacometti.jpg
-- name: amusement-park-amusement-park-2-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-dys-1.jpg
-- name: rain-princess-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line-2.jpg
-- name: bordercrossing-bordercrossing-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-pond.jpg
-- name: dragon-desert-desert-dragon-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-plentiful.jpg
-- name: art-museum-art-museum-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colored-circuits.jpg
-- name: oldroad-old-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-light-dali.jpg
-- name: fence-mexico-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-two.jpg
-- name: docks-docks-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-marcel-duchamp.jpg
-- name: copper-circuit-colonial-solider-pointing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-colonial-solider-pointing.jpg
-- name: oldcabin-store-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-matrix.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
-- name: art-museum-art-museum-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-monet-one.jpg
-- name: aws-s3-stories-beach-rocks-currents-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-internet-numbers.jpg
-- name: yosemite-yosemite-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
-- name: old-gas-pumps-oldgaspumps-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kand-two.jpg
-- name: machine-road-machine-road-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-brush.jpg
-- name: stories-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-blue-circuit-5.jpg
-- name: old-barn-old-barn-1500-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-nazi-poster.jpg
-- name: oldhotel-oldhotel-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-smoking-cigarette.jpg
-- name: gypsymosaic-gypsy-eyes-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-nazi-poster.jpg
-- name: fence-fence-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alberto-giacometti.jpg
-- name: udnie-IMG_4753.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4753.jpg
-- name: border-crossing-bordercrossing-nazi-poster.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-nazi-poster.png
-- name: san-francisco-street-view-san-francisco-street-view-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-space-pizza.jpg
-- name: windowmountain-window-mountain-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crunch-paper.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-- name: mediterranean-mediterranean-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smoking-cigarette.jpg
-- name: oldsmallboat-oldsmallboat-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
-- name: crow_blue_circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_circuit.jpg
-- name: oldhouse-granaryfield-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-gred-mash.jpg
-- name: dragon-desert-desert-dragon-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-dresden.jpg
-- name: mosaic-face-mosaic-face-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-4.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+- name: aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+- name: flower-barbed-wire-flower-barbed-wire-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-matrix.jpg
+- name: berlinwall-DSC-0084-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
+- name: downtown-trucksilo-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-nazi-poster.jpg
+- name: oldhouse-granaryfield-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+- name: rockingchair-face-2-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-clean-view.jpg
+- name: gypsymosaic-gypsy-eyes-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crafty-painting.jpg
+- name: mosaic-face-mosaic-face-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crabapple.jpg
+- name: wall-cannon-wall-cannon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-blue-circuit.jpg
+- name: braceros-domingo-ulloa-dinosaur-walking-desert.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dinosaur-walking-desert.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
+- name: san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
+- name: store-on-corner-store-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-ww2-color.jpg
+- name: stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-art-museum-light-dali.jpg
+- name: abe-lincoln-one-smooth-ride-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-15-87.jpg
+- name: blossombar-crunch-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-50-62.jpg
+- name: subway-subway-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-asteroids.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
+- name: docks-docks-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-paper.jpg
+- name: legal-statue-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+- name: oldbarn-oldbarn-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-three.jpg
+- name: birdhouse-birdhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kandinsky-bv.jpg
+- name: liberty-back-statue-liberty-back-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-marcel-duchamp.jpg
+- name: old-school-house-old-schoolhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purp-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+- name: cannon-facing-cannon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
+- name: old-granary-field-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sand-paper.jpg
+- name: containership-containership-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-propaganda-leaflets.jpg
+- name: server-cloud-server-racks-door-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-light-dali.jpg
+- name: berlinwall2-berlinwall-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-monet-one.jpg
+- name: rockingchair-rockingchair-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-storm.jpg
+- name: downtheline-downtheline-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-far-away.jpg
+- name: old-school-house-old-schoolhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-pond.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
+- name: la-muse-hiding-monster-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hiding-monster-statue.jpg
+- name: crow-crow-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
+- name: ellis-island-ellisisland-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gan-vogh.jpg
+- name: crow-crow-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-kand-two.jpg
+- name: server-cloud-server-racks-clouds-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-atari-asteroids.jpg
+- name: ellis-island-ellisisland-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-pablo-blue.jpg
+- name: gears-4882162452-fa3126b38d-b-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purp-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-wols.jpg
+- name: miamibeach-miamibeach-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colored-circuits.jpg
+- name: aws-s3-square-66-189-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1-square.jpg
+- name: braceros-domingo-ulloa-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-high-speed-train-station-france.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-spagetti-accident.jpg
+- name: carry-load-carryload-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crabapple.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+- name: white-house-lawn-white-house-window-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-wols.jpg
 ---
 Fallin Home Shown In Country Living Magazine.&nbsp;Boost Social Security Checks By Tapping IRAs Early, Suggests Study.&nbsp;Conference To Address Connection Between Big Data And Food Safety.&nbsp;Watch Delivery Driver Repeatedly Run Over Package.&nbsp;Geometry Global And MediaINFO Digital Library.&nbsp;Yolanda Adams Just Added To Global Phenomenon, Peace Starts With Me Rally.&nbsp;Siegmeister Was Driven To Quit By Divorce, Lawyer Says.&nbsp;The Boastfuls Set To Premier First Single Tequila At Stage West Show Friday.&nbsp;
